force-app/main/default/objects/Application_Event__c/Application_Event__c.object-meta.xml
<CustomObject>
    <label>Application Event</label>
    <nameField>
        <displayFormat>EVT-{000000}</displayFormat>
        <label>Application Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>