force-app/main/default/objects/Application_Event__c/fields/Details_JSON__c.field-meta.xml
<CustomField>
    <fullName>Details_JSON__c</fullName>
    <label>Details JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>